# raytracing-course-hw

./: .gitignore  CMakeLists.txt  build.sh  clean.sh  main.cpp  run.sh
include/: image.h  primitives.h  scene.h
src/: image.cpp  main.cpp  primitives.cpp  scene.cpp
